--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,16 @@
         <div class="w-full max-w-md bg-white rounded-lg shadow-lg overflow-hidden">
             <p class="text-xs text-gray-500 text-center py-1">Advertisement</p>
             <div class="ad-banner" style="width: 100%; height: 100px; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center;">
-                <p class="text-gray-400">Ad Banner (320x100)</p>
+                <p class="text-gray-400"><script type="text/javascript">
+	atOptions = {
+		'key' : '66f25ad1d96e9aef772424016137476f',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/66f25ad1d96e9aef772424016137476f/invoke.js"></script>)</p>
             </div>
         </div>
     </div>
