--- a/templates/index.html
+++ b/templates/index.html
@@ -156,8 +156,16 @@
           <p class="mb-4 text-gray-600">This is an advertisement. You can close this ad in <span id="countdown" class="font-semibold text-primary">30</span> seconds.</p>
           <p id="ad-reason" class="mb-4 text-xs md:text-sm text-gray-500"></p>
           <div id="ad-content" class="mb-4 rounded-lg overflow-hidden shadow-lg">
-              <iframe width="100%" height="200" src="https://www.youtube.com/embed/Y-JKELyGPdo?autoplay=1&mute=1" title="Deadpool vs Francis - Final Fight Scene - Deadpool (2016) Movie Clip HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '66f25ad1d96e9aef772424016137476f',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/66f25ad1d96e9aef772424016137476f/invoke.js"></script>          </div>
           <button id="close-ad" class="absolute top-2 right-2 text-gray-400 hover:text-gray-600 hidden transition-colors duration-300">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
