--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,15 @@
             },
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YV0ZQNP2YS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YV0ZQNP2YS');
+</script>
     <meta name="description" content="AI Book Generator: Enrich your online business with data-driven insights. Discover our products, features, and company information.">
     <meta name="keywords" content="AI Book Generator, online business, data insights, products, features, company">
     <meta property="og:title" content="AI Book Generator">
