--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,6 +6,7 @@
     <title>NovelistAI - AI-Powered Book Creation</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+<script defer data-domain="bookai.onrender.com" src="https://plausible.io/js/script.js"></script>
 
     <script>
         tailwind.config = {
