--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,8 @@
             border: 1px solid rgba(255, 255, 255, 0.18);
         }
     </style>
+	<script defer data-domain="bookai.onrender.com/playground" src="https://plausible.io/js/script.js"></script>
+
 </head>
 <body class="font-sans text-gray-800 min-h-screen flex flex-col gradient-bg">
   <main class="flex flex-col md:flex-row h-screen p-4 md:p-8 gap-4">
