--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,8 @@
     <meta property="og:image" content="https://example.com/image.jpg">
     <meta property="og:url" content="https://example.com">
     <meta name="twitter:card" content="summary_large_image">
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/logo.png">
+
     <style>
         @media (max-width: 640px) {
             .mobile-full-width {
