--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,10 @@
     <meta property="og:image" content="https://example.com/image.jpg">
     <meta property="og:url" content="https://example.com">
     <meta name="twitter:card" content="summary_large_image">
-        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/logo.png">
+    
+    <a href="https://bookai.onrender.com/">
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/logo.png">
+    </a>
 
     <style>
         @media (max-width: 640px) {
